Fix toggle scale label

--- a/sample.html
+++ b/sample.html
@@ -1686,9 +1686,9 @@
         window.readingWeight = !readingWeight;
 
         if (readingWeight) {
-            $("#scaleToggle").html("Read as Raw");
+            $(".scaleToggle").html("Read as Raw");
         } else {
-            $("#scaleToggle").html("Read as Weight");
+            $(".scaleToggle").html("Read as Weight");
         }
     }
 
