--- a/sample.html
+++ b/sample.html
@@ -325,7 +325,7 @@
 
                                         <div class="form-group form-inline">
                                             <label for="pxlPrinterTray">Printer Tray</label>
-                                            <input type="number" id="pxlPrinterTray" class="form-control pull-right" />
+                                            <input type="text" id="pxlPrinterTray" class="form-control pull-right" />
                                         </div>
 
                                         <div class="form-group form-inline">
@@ -926,14 +926,14 @@
         qz.printers.details().then(function(data) {
             var list = '';
             for(var i = 0; i < data.length; i++) {
-                list += "<li>&nbsp; " + (data[i].default ? "* " : "") +
-                        data[i].name + " (" + data[i].driver + ")" +
-                        (data[i].trays > 0 ? " with " + data[i].trays + " Trays" : "") +
-                        " @ " + data[i].density + "dpi" +
-                        "</li>";
+                list += "<li>" + (data[i].default ? "* " : "") + data[i].name + "<ul>" +
+                        "<li><strong>Driver:</strong> " + data[i].driver + "</li>" +
+                        "<li><strong>Density:</strong> " + data[i].density + "dpi</li>" +
+                        (data[i].trays ? "<li><strong>Trays:</strong> " + data[i].trays + "</li>" : "") +
+                        "</ul>";
             }
 
-            displayMessage("<strong>Printer details:</strong><br/><ul>" + list + "</ul>", null, 15000);
+            pinMessage("<strong>Printer details:</strong><br/><ul>" + list + "</ul>");
         }).catch(displayError);
     }
 
